@@ -1,3 +1,9 @@
+globus-gridftp-server (12.2-1+gt6.@distro@) @distro@; urgency=low
+
+  * Fix tests when getgroups() does not return effective gid
+
+ -- Globus Toolkit <support@globus.org>  Tue, 20 Jun 2017 12:35:22 -0400
+
 globus-gridftp-server (12.1-1+gt6.@distro@) @distro@; urgency=low
 
   * better delay for end of session ref check
